--- a/server/app/package.json
+++ b/server/app/package.json
@@ -48,6 +48,9 @@
         
         "sprintf": ">=0.1.1",
 	    "mustache": "*",
-	    "debug": "*"
+	    "debug": "*",
+		"i18n": "*",
+		"ejs": "*",
+		"ejs-locals": "*"
     }
 }
